department-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
  namespace: test
  labels:
    app: department
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      containers:
      - name: department
        image: alhanouf1/department
        ports:
        - containerPort: 80
