department-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: department
  namespace: test
spec:
  type: NodePort
  selector:
    app: department
  ports:
    - port: 80
      targetPort: 80
